tests/sumo/output/e1Instant/errors/lane_empty/errors.sumo
Error: Attribute 'lane' in definition of instantInductionLoop '4/1to3/1' is empty.
Quitting (on error).
